# src/routes/auth.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { register } from '../controllers/auth.controller';
+import { login, register } from '../controllers/auth.controller';
 import { validate } from '../middleware/validate.middleware';
 
 const router = Router();
@@ -13,6 +13,15 @@ router.post(
     { field: 'password', type: 'password', required: true },
   ]),
   register
+);
+
+router.post(
+  '/login',
+  validate([
+    { field: 'email', type: 'email', required: true },
+    { field: 'password', type: 'password', required: true },
+  ]),
+  login
 );
 
 export default router;
